manifests/dev/attic/Deployment-attic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attic
  namespace: attic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: attic
      app.kubernetes.io/name: attic
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: attic
        app.kubernetes.io/name: attic
    spec:
      containers:
        - command:
            - atticd
            - -f
            - /etc/atticd/server.toml
          image: ghcr.io/lillecarl/nix-csi/scratch:1.0.1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 30
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
          name: attic
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /nix
              name: nix
              subPath: nix
            - mountPath: /etc/atticd
              name: config
      volumes:
        - csi:
            driver: nix.csi.store
            volumeAttributes:
              nixExpr: |
                (builtins.getFlake "github:duck1123/k3s-fleetops").packages.x86_64-linux.attic-server-bundle
          name: nix
        - configMap:
            name: attic
          name: config
