manifests/dev/attic/Service-attic.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: attic
    app.kubernetes.io/name: attic
  type: ClusterIP
