manifests/dev/attic/Ingress-attic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  namespace: attic
spec:
  ingressClassName: traefik
  rules:
    - host: attic.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: attic
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - attic.home.kronkltd.net
      secretName: attic-tls
